--- a/FServer2_0/source/CMakeLists.txt
+++ b/FServer2_0/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(libFS STATIC Server/FServer.cpp
                          Server/Servise/basic.cpp 
-                         Server/IO/proxy.cpp
+                         Server/Servise/filter_io.cpp
                          Server/IO/io.cpp
                          Server/IO/buffer.cpp
 )
