--- a/FServer2_0/source/CMakeLists.txt
+++ b/FServer2_0/source/CMakeLists.txt
@@ -5,4 +5,10 @@ add_library(libFS STATIC Server/FServer.cpp
                          Server/IO/buffer.cpp
 )
 
+add_library(libFC STATIC Client/FClient.cpp
+                         Client/Servise/basic.cpp 
+                         Client/Servise/filter_io.cpp
+                         Server/IO/io.cpp
+                         Server/IO/buffer.cpp
+)
 
