--- a/FServer2_0/CMakeLists.txt
+++ b/FServer2_0/CMakeLists.txt
@@ -14,16 +14,24 @@ add_subdirectory(
 # Test target
 add_executable (tests_client "testing/tests_client.cpp")
 add_executable (tests_server "testing/tests_server.cpp")
+add_executable (tests_connection "testing/tests_connection.cpp")
 
 target_link_libraries(
         tests_server
         PRIVATE libFS
 )
 
+
 target_link_libraries(
         tests_client
         PRIVATE libFC
 )
+
+target_link_libraries(
+    tests_connection 
+        PRIVATE libFS libFC
+)
+
 
 # Link test target against gtest libraries
 target_link_libraries(
@@ -38,6 +46,13 @@ target_link_libraries(
     gmock gmock_main
 )
 
+target_link_libraries(
+    tests_connection PRIVATE
+    gtest gtest_main
+    gmock gmock_main
+)
+
+
 if (MSVC)
     # @see https://github.com/google/googletest/blob/master/googletest/README.md
     # Visual Studio Dynamic vs Static Runtimes
@@ -49,6 +64,10 @@ if (MSVC)
     )
     target_compile_options(
         tests_server PRIVATE
+        /W4
+    )
+    target_compile_options(
+        tests_connection PRIVATE
         /W4
     )
 
@@ -69,6 +88,10 @@ else ()
     )
     target_compile_options(
         tests_server PRIVATE
+        -Wall -Wextra -pedantic -Werror
+    )
+    target_compile_options(
+        tests_connection PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
     
