fix bags on linux and not MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,20 @@ include_directories("FServer2_0/source/Server")
 include_directories("FServer2_0/libs/asio-1.24.0/include")
 
 
+
+
+add_compile_options( -Wno-reorder  )
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(FServer FServer.cpp)
 add_executable(FClient FClient.cpp)
+
+target_compile_features(FServer PRIVATE cxx_std_17)
+target_compile_features(FClient PRIVATE cxx_std_17)
+
+
 
 add_subdirectory(FServer2_0)
 
