--- a/FServer2_0/CMakeLists.txt
+++ b/FServer2_0/CMakeLists.txt
@@ -11,92 +11,95 @@ add_subdirectory(
 )
 
 
-# Test target
-add_executable (tests_client "testing/tests_client.cpp")
-add_executable (tests_server "testing/tests_server.cpp")
-add_executable (tests_connection "testing/tests_connection.cpp")
+if(ON_TESTS)
 
-target_link_libraries(
-        tests_server
-        PRIVATE libFS
-)
+    # Test target
+    add_executable (tests_client "testing/tests_client.cpp")
+    add_executable (tests_server "testing/tests_server.cpp")
+    add_executable (tests_connection "testing/tests_connection.cpp")
 
-
-target_link_libraries(
-        tests_client
-        PRIVATE libFC
-)
-
-target_link_libraries(
-    tests_connection 
-        PRIVATE libFS libFC
-)
+    target_link_libraries(
+            tests_server
+            PRIVATE libFS
+    )
 
 
-# Link test target against gtest libraries
-target_link_libraries(
-    tests_client PRIVATE
-    gtest gtest_main
-    gmock gmock_main
-)
+    target_link_libraries(
+            tests_client
+            PRIVATE libFC
+    )
 
-target_link_libraries(
-    tests_server PRIVATE
-    gtest gtest_main
-    gmock gmock_main
-)
-
-target_link_libraries(
-    tests_connection PRIVATE
-    gtest gtest_main
-    gmock gmock_main
-)
+    target_link_libraries(
+        tests_connection 
+            PRIVATE libFS libFC
+    )
 
 
-if (MSVC)
-    # @see https://github.com/google/googletest/blob/master/googletest/README.md
-    # Visual Studio Dynamic vs Static Runtimes
-    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-    
-    target_compile_options(
+    # Link test target against gtest libraries
+    target_link_libraries(
         tests_client PRIVATE
-        /W4
+        gtest gtest_main
+        gmock gmock_main
     )
-    target_compile_options(
+
+    target_link_libraries(
         tests_server PRIVATE
-        /W4
+        gtest gtest_main
+        gmock gmock_main
     )
-    target_compile_options(
+
+    target_link_libraries(
         tests_connection PRIVATE
-        /W4
+        gtest gtest_main
+        gmock gmock_main
     )
 
-else ()
 
-    #run time library fix google-test
+    if (MSVC)
+        # @see https://github.com/google/googletest/blob/master/googletest/README.md
+        # Visual Studio Dynamic vs Static Runtimes
+        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+        
+        target_compile_options(
+            tests_client PRIVATE
+            /W4
+        )
+        target_compile_options(
+            tests_server PRIVATE
+            /W4
+        )
+        target_compile_options(
+            tests_connection PRIVATE
+            /W4
+        )
 
-    if(WIN32)
+    else ()
 
-    set(CMAKE_CXX_FLAGS_RELEASE "/MT")
-    set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
+        #run time library fix google-test
 
+        if(WIN32)
+
+        set(CMAKE_CXX_FLAGS_RELEASE "/MT")
+        set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
+
+        endif()
+
+        target_compile_options(
+            tests_client PRIVATE
+            -Wall -Wextra -pedantic 
+        )
+        target_compile_options(
+            tests_server PRIVATE
+            -Wall -Wextra -pedantic 
+        )
+        target_compile_options(
+            tests_connection PRIVATE
+            -Wall -Wextra -pedantic 
+        )
+        
     endif()
 
-    target_compile_options(
-        tests_client PRIVATE
-        -Wall -Wextra -pedantic 
-    )
-    target_compile_options(
-        tests_server PRIVATE
-        -Wall -Wextra -pedantic 
-    )
-    target_compile_options(
-        tests_connection PRIVATE
-        -Wall -Wextra -pedantic 
-    )
-    
 endif()
-
 
 
 #target_link_libraries (tests_client PRIVATE ../build/lib/Debug/gtest.lib ../build/lib/Debug/gtest_main.lib)
